Added repository in package.json

--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
   },
   "dependencies": {
     "markdown-it-ultree": "^1.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/UltraByteSoftwares/vscode-markdown-tree"
   }
 }
