--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "markdown-tree",
   "displayName": "Markdown Tree",
-  "description": "Create tree-like structure in markdown",
+  "description": "Generate collapsible trees in markdown",
   "version": "1.0.0",
   "icon": "./res/logo.png",
   "publisher": "UltraByteSoftwares",
