--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "menus": {
       "explorer/context": [
         {
-          "command": "ultree.generateFolderTree",
+          "command": "ultree.generateFolderTreeFromSelection",
           "group": "ultree"
         }
       ]
     },
     "commands": [
       {
-        "command": "ultree.generateFolderTree",
+        "command": "ultree.generateFolderTreeFromSelection",
         "title": "Ultree: Generate Folder Tree"
       }
     ],
