--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "fast-glob": "^3.3.2",
     "markdown-it-ultree": "^1.0.0"
   },
   "repository": {
